force-app/main/default/objects/Branch__c/fields/AuthProviderArabicName__c.field-meta.xml
<CustomField>
    <fullName>AuthProviderArabicName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>שם ספק רישוי בערבית</label>
    <length>255</length>
    <type>Text</type>
</CustomField>