force-app/main/default/objects/Branch__c/fields/Branch_Address__c.field-meta.xml
<CustomField>
    <fullName>Branch_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>הזנת כתובת במלל חופשי בשדה זה, במידה והיא אינה קיימת במאגר</inlineHelpText>
    <label>רחוב- מלל חופשי</label>
    <length>100</length>
    <type>Text</type>
</CustomField>