force-app/main/default/objects/Branch__c/fields/Branch_Home_Num__c.field-meta.xml
<CustomField>
    <fullName>Branch_Home_Num__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>מספר בית</label>
    <length>10</length>
    <type>Text</type>
</CustomField>