force-app/main/default/objects/Branch__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>